# kingdom-sim

./: Cargo.toml  Makefile.toml  README.md  TODO.md  bevy_game-7ea8195aeac8a504.js  build.rs  dev.cmd  index.html  kingdom_sim-11f8bf241cbc42d1.js  kingdom_sim-13841c419fcf8902.js  kingdom_sim-14b70a62dbc812ba.js  kingdom_sim-2331d7a2fcaae112.js  kingdom_sim-2cb4d059af9d3eb0.js  kingdom_sim-3c0b73b3284ace1.js  kingdom_sim-40632eef7e5b003ed75b3f8279beadbcad51156336bb85ed714c338a9e6e8a6489622dcd5e5d23c081c47e7e64ee31f6.js  kingdom_sim-4524721f1e738ccf.js  kingdom_sim-8e86cc3be1259921.js  kingdom_sim-a82799ad21d28df4.js  kingdom_sim-a85dcc7ab6617ea.js  kingdom_sim-abdc3a6d3973684c.js  kingdom_sim-b0bbf651fa798b34.js  kingdom_sim-ce8231fbf47d051b.js  kingdom_sim-d1d25cbc213f0342.js  kingdom_sim-d4c55149875b1ec2.js  kingdom_sim-d9bad68e39785a0a.js  kingdom_sim-e42ea7a67e52018f.js  kingdom_sim-e902f0cb864672a8.js  kingdom_sim-ebc40fa124473b21.js  kingdom_sim-fcfb547c7ba961824fccf94069feaf3d4497915d7843535f1cbb31ed2d5a7616b0f60970b9a8ff02c6050c8061e9a0ba.js
.cargo/: config.toml
.github/workflows/: ci.yml  release.yaml
assets/prefabs/: _.buildings.yaml  _.items.yaml  _.plants.yaml  bush_1.pdn  oak.plant.json  plants.yaml
assets/shaders/: lighting.wgsl
src/: activity.rs  activity_info.rs  building.rs  building_job.rs  common.rs  countdown_heap.rs  crafting_progress.rs  create_world.rs  environment_hud.rs  init.rs  land_tilemap.rs  lib.rs  loading.rs  main.rs  map.rs  menu.rs  monkey_planner.rs  movement.rs  occupy_tiles_plugin.rs  planned_work.rs  planting_crops.rs  player.rs  post_processing.rs  prefab_loader.rs  quad_tree.rs  resource_gathering.rs  resources.rs  skills.rs  status_info.rs  stockpile.rs  tasks.rs  tilemap_utils.rs  tree.rs  tree_cutting_job.rs  weather_ui.rs  work_process.rs  work_progress.rs  worker_job_tooltip.rs
src/_jobs/: mod.rs  systems.rs
src/ambience/: day_night.rs  generate_hourly_rain_for_year.rs  mod.rs  temperature.rs  temperature2.rs
src/biomes/: mod.rs  overlay_tilemap.rs  soil_fertility.rs  tile_image.rs
src/building/: constructing.rs  logic.rs  mod.rs
src/creature/: mod.rs
src/cutting_tree/: logic.rs  mod.rs
src/datetime/: mod.rs  tooltip.rs
src/harvesting/: logic.rs  mod.rs
src/items/: mod.rs
src/jobs/: helpers.rs  mod.rs  systems.rs  work_process.rs
src/planting/: logic.rs  mod.rs
src/plants/: bundle.rs  destruction.rs  intrinsic_resource.rs  mod.rs  resource_producer.rs
src/tasks/: mod.rs  tooltip.rs
src/timer_plugin/: mod.rs  timer_heap.rs
src/tree_cutting/: logic.rs  mod.rs
src/weather/: air_block.rs  clouds.rs  clouds.rs_  mod.rs
src/work/: crafting_process.rs  mod.rs  movement.ts
src/worker/: mod.rs
