[package]
name = "kingdom_sim"
version = "0.0.1"
publish = false
authors = ["azuresplash@gmail.com"]
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.10", features = ["bevy_asset", "bevy_asset", "bevy_render", "bevy_core_pipeline", "bevy_winit", "png", "x11"] }
bevy_kira_audio = { version = "0.15" }
bevy_asset_loader = { version = "0.16" }
rand = "0.8"
itertools = "0.10"
bevy_common_assets = { version = "0.6", features = ["yaml"] }
bevy_turborand = { version = "0.5" }
bevy_ecs_tilemap = { version = "0.10" }
serde = "1.0"
chrono = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.28", features = ["x11"] }

[build-dependencies]
embed-resource = "2.1"
