[package]
name = "kingdom_sim"
version = "0.0.1"
publish = false
authors = ["azuresplash@gmail.com"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


[features]
dev = ["bevy/bevy_dylib"]

[dependencies]
bevy = { version = "0.11", features = ["bevy_asset", "bevy_asset", "bevy_render", "bevy_core_pipeline", "bevy_winit", "png", "x11"] }
bevy_kira_audio = { version = "0.16" }
bevy_asset_loader = { version = "0.17" }
bevy_common_assets = { version = "0.7", features = ["yaml"] }
bevy_turborand = { version = "0.6" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap.git", branch = "main", features = ["atlas"] }
serde = "1.0"
chrono = "0.4"
bevy_pancam = "0.9"
sun-times = "0.2.0"
noise = { version = "0.8.2" }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.28", features = ["x11"] }

[build-dependencies]
embed-resource = "2.1"
